--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
   <div>
     <div style='text-align: right;' class="controls">
-        <span class="dot 1" onclick='currentSlide(1)'></span>
-        <span class="dot 2" onclick='currentSlide(2)'></span>
-        <span class="dot 3" onclick='currentSlide(3)'></span>
+        <span class="dot first" onclick='currentSlide(1)'></span>
+        <span class="dot second" onclick='currentSlide(2)'></span>
+        <span class="dot third" onclick='currentSlide(3)'></span>
     </div>
-    <div class="slide" id="1">
+    <div class="slide" id="first">
         <div class="text">
             <h1 class="title">
                 Slider Title<br/>
@@ -34,7 +34,7 @@
             <source src="./Resources/airbnb.mp4" type="video/mp4">
         </video>
     </div>
-    <div class="slide" id="2"> 
+    <div class="slide" id="second"> 
         <div class="text">
             <h1 class="title">
                 Slider Title<br/>
@@ -49,7 +49,7 @@
             <source src="./Resources/bg-cover-new.mp4" type="video/mp4">
         </video>
     </div>
-    <div class="slide" id="3">
+    <div class="slide" id="third">
         <div class="text">
             <h1 class="title">
                 Slider Title<br/>
