goToSlide function no working

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
   <div>
     <div style='text-align: right;' class="controls">
-        <span class="dot first" onclick='currentSlide(1)'></span>
-        <span class="dot second" onclick='currentSlide(2)'></span>
-        <span class="dot third" onclick='currentSlide(3)'></span>
+        <span class="dot first" onclick='goToSlide(this)'></span>
+        <span class="dot second" onclick='goToSlide(this)'></span>
+        <span class="dot third" onclick='goToSlide(this)'></span>
     </div>
     <div class="slide" id="first">
         <div class="text">
