autoplay bug fixed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 
             </h2>
         </div>
-        <video loop autoplay oncanplay="$(this)[0].play()">
+        <video loop muted autoplay>
             <source src="./Resources/airbnb.mp4" type="video/mp4">
         </video>
     </div>
@@ -49,7 +49,7 @@
                 <span class="glyphicon arrow glyphicon-download"></span>
             </h2>
         </div>
-        <video loop autoplay oncanplay="$(this)[0].play()">
+        <video loop muted autoplay>
             <source src="./Resources/bg-cover-new.mp4" type="video/mp4">
         </video>
     </div>
@@ -66,7 +66,7 @@
                 <span class="glyphicon arrow glyphicon-download"></span>
             </h2>
         </div>
-        <video loop autoplay oncanplay="$(this)[0].play()">
+        <video loop muted autoplay>
             <source src="./Resources/Anatomy-of-Next-Season-Two.mp4" type="video/mp4">
         </video>
     </div>
